unpackaged/main/default/objects/Account/fields/Integrated_with_OpenStax_content__c.field-meta.xml
<CustomField>
    <fullName>Integrated_with_OpenStax_content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrated with OpenStax content</label>
    <type>Checkbox</type>
</CustomField>