unpackaged/main/default/objects/Account/fields/Interactivity_annotate__c.field-meta.xml
<CustomField>
    <fullName>Interactivity_annotate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interactivity annotate</label>
    <type>Checkbox</type>
</CustomField>