unpackaged/main/default/objects/Account/fields/K_I_P__c.field-meta.xml
<CustomField>
    <fullName>K_I_P__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Key Institutional Partner</inlineHelpText>
    <label>K.I.P.</label>
    <type>Checkbox</type>
</CustomField>