unpackaged/main/default/objects/Account/fields/KIP_Start_Year__c.field-meta.xml
<CustomField>
    <fullName>KIP_Start_Year__c</fullName>
    <description>Year that school became a KIP school.</description>
    <label>KIP Start Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2015-16</fullName>
            </value>
            <value>
                <fullName>2016-17</fullName>
            </value>
            <value>
                <fullName>2017-18</fullName>
            </value>
            <value>
                <fullName>2018-19</fullName>
            </value>
            <value>
                <fullName>2019-20</fullName>
            </value>
            <value>
                <fullName>2020-21</fullName>
            </value>
            <value>
                <fullName>2021-22</fullName>
            </value>
            <value>
                <fullName>2022-23</fullName>
            </value>
            <value>
                <fullName>2023-24</fullName>
            </value>
            <value>
                <fullName>2024-25</fullName>
            </value>
            <value>
                <fullName>2025-26</fullName>
            </value>
            <value>
                <fullName>2026-27</fullName>
            </value>
            <value>
                <fullName>2027-28</fullName>
            </value>
            <value>
                <fullName>2028-29</fullName>
            </value>
            <value>
                <fullName>2029-30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>