unpackaged/main/default/objects/Account/fields/Landing_page__c.field-meta.xml
<CustomField>
    <fullName>Landing_page__c</fullName>
    <description>Partner landing page</description>
    <label>Landing page</label>
    <type>Url</type>
</CustomField>