unpackaged/main/default/objects/Account/fields/Last_Lead_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Lead_Email_Sent_Date__c</fullName>
    <label>Last Lead Email Sent Date</label>
    <type>Date</type>
</CustomField>