unpackaged/main/default/objects/Account/fields/Lead_Email_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Lead_Email_Frequency__c</fullName>
    <label>Lead Email Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Once a Day</fullName>
            </value>
            <value>
                <fullName>Once a Week</fullName>
                <default>true</default>
                <label>Once a Week</label>
            </value>
            <value>
                <fullName>Once a Month</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>