unpackaged/main/default/objects/Account/fields/Lead_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do we share leads with this partner?</inlineHelpText>
    <label>Lead Sharing</label>
    <type>Checkbox</type>
</CustomField>