unpackaged/main/default/objects/Account/fields/Library_Stax__c.field-meta.xml
<CustomField>
    <fullName>Library_Stax__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did we send them a library stax thing - should delete</inlineHelpText>
    <label>Library Stax</label>
    <type>Checkbox</type>
</CustomField>