unpackaged/main/default/objects/Account/fields/LMS__c.field-meta.xml
<CustomField>
    <fullName>LMS__c</fullName>
    <inlineHelpText>Learning Management System</inlineHelpText>
    <label>LMS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canvas</fullName>
            </value>
            <value>
                <fullName>Sakai</fullName>
            </value>
            <value>
                <fullName>Moodle</fullName>
            </value>
            <value>
                <fullName>MoodleRooms</fullName>
            </value>
            <value>
                <fullName>Blackboard</fullName>
            </value>
            <value>
                <fullName>Brightspace</fullName>
            </value>
            <value>
                <fullName>Learning Studio</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>