unpackaged/main/default/objects/Account/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>