unpackaged/main/default/objects/Account/fields/LocationF__c.field-meta.xml
<CustomField>
    <fullName>LocationF__c</fullName>
    <formula>IF( BillingState = "Texas", IF( BillingCity = "Houston", "Houston", "Texas"), 
IF( BillingCountry = "United States" , "United States", "World"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>