unpackaged/main/default/objects/Account/fields/LongID__c.field-meta.xml
<CustomField>
    <fullName>LongID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>18 digit Salesforce ID - case sensitive</inlineHelpText>
    <label>LongID</label>
    <type>Text</type>
</CustomField>