unpackaged/main/default/objects/Account/fields/Measure_assessments_in_most__c.field-meta.xml
<CustomField>
    <fullName>Measure_assessments_in_most__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Measure assessments in most</label>
    <type>Checkbox</type>
</CustomField>