unpackaged/main/default/objects/Account/fields/Measure_mapping__c.field-meta.xml
<CustomField>
    <fullName>Measure_mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Measure mapping</label>
    <type>Checkbox</type>
</CustomField>