unpackaged/main/default/objects/Account/fields/Mission_support_fee_terms__c.field-meta.xml
<CustomField>
    <fullName>Mission_support_fee_terms__c</fullName>
    <label>Mission support fee terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>