unpackaged/main/default/objects/Account/fields/MSI__c.field-meta.xml
<CustomField>
    <fullName>MSI__c</fullName>
    <label>MSI</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HBCU</fullName>
            </value>
            <value>
                <fullName>AANAPISI</fullName>
            </value>
            <value>
                <fullName>HSI</fullName>
            </value>
            <value>
                <fullName>TCU</fullName>
            </value>
            <value>
                <fullName>PBI</fullName>
            </value>
            <value>
                <fullName>ANNH</fullName>
            </value>
            <value>
                <fullName>NASNTI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>