unpackaged/main/default/objects/Account/fields/NCES_District_ID2__c.field-meta.xml
<CustomField>
    <fullName>NCES_District_ID2__c</fullName>
    <formula>Parent.NCES_District_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCES District ID</label>
    <type>Text</type>
</CustomField>