unpackaged/main/default/objects/Account/fields/NCES_District_ID__c.field-meta.xml
<CustomField>
    <fullName>NCES_District_ID__c</fullName>
    <inlineHelpText>ID of the parent (school district)</inlineHelpText>
    <label>NCES District ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>