unpackaged/main/default/objects/Account/fields/NCESID__c.field-meta.xml
<CustomField>
    <fullName>NCESID__c</fullName>
    <label>NCESID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>