unpackaged/main/default/objects/Account/fields/Needs_Lead_Email__c.field-meta.xml
<CustomField>
    <fullName>Needs_Lead_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Lead Email</label>
    <type>Checkbox</type>
</CustomField>