unpackaged/main/default/objects/Account/fields/Needs_Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Needs_Partner_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Partner Contact</label>
    <type>Checkbox</type>
</CustomField>