unpackaged/main/default/objects/Account/fields/New_Books_Offered__c.field-meta.xml
<CustomField>
    <fullName>New_Books_Offered__c</fullName>
    <label>New Books Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Books</valueSetName>
    </valueSet>
</CustomField>