unpackaged/main/default/objects/Account/fields/New_Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>New_Landing_Page__c</fullName>
    <label>New Landing Page</label>
    <type>Url</type>
</CustomField>