unpackaged/main/default/objects/Account/fields/New_Long_Description__c.field-meta.xml
<CustomField>
    <fullName>New_Long_Description__c</fullName>
    <label>New Long Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>