unpackaged/main/default/objects/Account/fields/new_longitude__c.field-meta.xml
<CustomField>
    <fullName>new_longitude__c</fullName>
    <label>new longitude</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>