unpackaged/main/default/objects/Account/fields/New_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>New_Short_Description__c</fullName>
    <label>New Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>