unpackaged/main/default/objects/Account/fields/Online_teaching_academic_integrity__c.field-meta.xml
<CustomField>
    <fullName>Online_teaching_academic_integrity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online teaching academic integrity</label>
    <type>Checkbox</type>
</CustomField>