unpackaged/main/default/objects/Account/fields/Online_teaching_audio_video__c.field-meta.xml
<CustomField>
    <fullName>Online_teaching_audio_video__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online teaching audio video</label>
    <type>Checkbox</type>
</CustomField>