unpackaged/main/default/objects/Account/fields/Online_teaching_in_lecture__c.field-meta.xml
<CustomField>
    <fullName>Online_teaching_in_lecture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online teaching in lecture</label>
    <type>Checkbox</type>
</CustomField>