unpackaged/main/default/objects/Account/fields/ParentDups__c.field-meta.xml
<CustomField>
    <fullName>ParentDups__c</fullName>
    <formula>IF( ISBLANK(ParentId)= TRUE , Id, 
IF( ISBLANK(Parent.ParentId)= TRUE , Parent.Id,
IF( ISBLANK(Parent.Parent.ParentId)= TRUE , Parent.Parent.Id, 
  Parent.Parent.Parent.Id )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to determine the highest parent</inlineHelpText>
    <label>ParentDups</label>
    <type>Text</type>
</CustomField>