unpackaged/main/default/objects/Account/fields/Partner_status__c.field-meta.xml
<CustomField>
    <fullName>Partner_status__c</fullName>
    <label>Partner status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Past</fullName>
            </value>
            <value>
                <fullName>In Discussion</fullName>
            </value>
            <value>
                <fullName>Contract Review by Partner</fullName>
            </value>
            <value>
                <fullName>Contract Review by OpenStax</fullName>
            </value>
            <value>
                <fullName>Contract Review by Legal</fullName>
            </value>
            <value>
                <fullName>Not a Partner</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Current Partner</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Co-Marketing Partner</fullName>
                <isActive>false</isActive>
                <label>Co-Marketing Partner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>