unpackaged/main/default/objects/Account/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adaptive Courseware</fullName>
            </value>
            <value>
                <fullName>Clicker/classroom engagement</fullName>
            </value>
            <value>
                <fullName>Content customization</fullName>
            </value>
            <value>
                <fullName>E-Reader</fullName>
            </value>
            <value>
                <fullName>Labs and Lab Manuals</fullName>
            </value>
            <value>
                <fullName>Online homework</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Reading comprehension</fullName>
            </value>
            <value>
                <fullName>Simulations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>