unpackaged/main/default/objects/Account/fields/Partnership_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Contact__c</fullName>
    <inlineHelpText>Which OS employee owns relationship with this</inlineHelpText>
    <label>Partnership Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nicole Finkbeiner</fullName>
            </value>
            <value>
                <fullName>Kedrienne Day</fullName>
            </value>
            <value>
                <fullName>David Harris</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>