unpackaged/main/default/objects/Account/fields/Pell_Grant_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Pell_Grant_Recipients__c</fullName>
    <inlineHelpText>Number of students that receive pell grants</inlineHelpText>
    <label>Pell Grant Recipients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>