unpackaged/main/default/objects/Account/fields/Post_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Post_Secondary__c</fullName>
    <formula>IF(  ISPICKVAL( Type, "College/University (4)"),true,
IF(  ISPICKVAL( Type, "Technical/Community College (2)"), true,
IF(  ISPICKVAL( Type, "Career School/For-Profit (2)"), true,
False
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post Secondary</label>
    <type>Checkbox</type>
</CustomField>