unpackaged/main/default/objects/Account/fields/Receivables_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Receivables_Due_Date__c</fullName>
    <label>Receivables Due Date</label>
    <type>Date</type>
</CustomField>