unpackaged/main/default/objects/Account/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordTypeName</label>
    <type>Text</type>
</CustomField>