unpackaged/main/default/objects/Account/fields/RedShelf__c.field-meta.xml
<CustomField>
    <fullName>RedShelf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>needed to separate our Inclusive Access partner</description>
    <inlineHelpText>needed to separate our Inclusive Access partner</inlineHelpText>
    <label>RedShelf</label>
    <type>Checkbox</type>
</CustomField>