unpackaged/main/default/objects/Account/fields/Report_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Report_Payment_Schedule__c</fullName>
    <label>Report/Payment Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Bi-Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>