unpackaged/main/default/objects/Account/fields/Reporting_competency__c.field-meta.xml
<CustomField>
    <fullName>Reporting_competency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reporting competency</label>
    <type>Checkbox</type>
</CustomField>