unpackaged/main/default/objects/Account/fields/Research_Activity__c.field-meta.xml
<CustomField>
    <fullName>Research_Activity__c</fullName>
    <inlineHelpText>How much research does the Uni do?</inlineHelpText>
    <label>Research Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very High</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>