unpackaged/main/default/objects/Account/fields/Rich_Description__c.field-meta.xml
<CustomField>
    <fullName>Rich_Description__c</fullName>
    <label>Rich Description</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>