unpackaged/main/default/objects/Account/fields/Savings_Past_Years__c.field-meta.xml
<CustomField>
    <fullName>Savings_Past_Years__c</fullName>
    <inlineHelpText>Not last year, but everything older savings (school year).</inlineHelpText>
    <label>Savings Past Years</label>
    <summarizedField>Opportunity.Yearly_Savings__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Base_Year__c</field>
        <operation>lessThan</operation>
        <value>2021</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>