unpackaged/main/default/objects/Account/fields/Scaffolding_hints__c.field-meta.xml
<CustomField>
    <fullName>Scaffolding_hints__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scaffolding hints</label>
    <type>Checkbox</type>
</CustomField>