unpackaged/main/default/objects/Account/fields/Scaffolding_learner_explanations__c.field-meta.xml
<CustomField>
    <fullName>Scaffolding_learner_explanations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scaffolding learner explanations</label>
    <type>Checkbox</type>
</CustomField>