unpackaged/main/default/objects/Account/fields/Scaffolding_mental_practice__c.field-meta.xml
<CustomField>
    <fullName>Scaffolding_mental_practice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scaffolding mental practice</label>
    <type>Checkbox</type>
</CustomField>