unpackaged/main/default/objects/Account/fields/Scaffolding_social_intervention__c.field-meta.xml
<CustomField>
    <fullName>Scaffolding_social_intervention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scaffolding social intervention</label>
    <type>Checkbox</type>
</CustomField>