unpackaged/main/default/objects/Account/fields/School_District_ID2__c.field-meta.xml
<CustomField>
    <fullName>School_District_ID2__c</fullName>
    <formula>Parent.School_District_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gets the parent district ID</inlineHelpText>
    <label>School District ID</label>
    <type>Text</type>
</CustomField>