unpackaged/main/default/objects/Account/fields/School_District_ID__c.field-meta.xml
<CustomField>
    <fullName>School_District_ID__c</fullName>
    <inlineHelpText>School district ID (not sure which one, SF?)</inlineHelpText>
    <label>School District ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>