unpackaged/main/default/objects/Account/fields/School_Location__c.field-meta.xml
<CustomField>
    <fullName>School_Location__c</fullName>
    <formula>IF((OR(BillingCountry = "United States", BillingCountry = "United States Territory")), "Domestic","Foreign" )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Foreign or Domestic</inlineHelpText>
    <label>School Location</label>
    <type>Text</type>
</CustomField>