unpackaged/main/default/objects/Account/fields/SheerID_School_Name__c.field-meta.xml
<CustomField>
    <fullName>SheerID_School_Name__c</fullName>
    <label>SheerID School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>