unpackaged/main/default/objects/Account/fields/short_partner_description__c.field-meta.xml
<CustomField>
    <fullName>short_partner_description__c</fullName>
    <label>Short Partner Description</label>
    <type>TextArea</type>
</CustomField>