unpackaged/main/default/objects/Account/fields/Source_of_declined_partnership__c.field-meta.xml
<CustomField>
    <fullName>Source_of_declined_partnership__c</fullName>
    <label>Source of declined partnership</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Partner_status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner declined</fullName>
            </value>
            <value>
                <fullName>OpenStax declined</fullName>
            </value>
            <value>
                <fullName>Mutual decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>