unpackaged/main/default/objects/Account/fields/Students_Current_SY_Fall__c.field-meta.xml
<CustomField>
    <fullName>Students_Current_SY_Fall__c</fullName>
    <label>Students Current SY Fall</label>
    <summarizedField>Opportunity.Fall_Students__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Base_Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>